# IFCFeature

EDA/: EDA.py
Evaluations/: common.py
Evaluations/AKSR/: Ours-UZH.py
Evaluations/MA_MN/: Ours-UZH.py
Evaluations/NN mAP/: Ours-UZH.py
Evaluations/Rep_MLE/: Ours-HPatches.py  Ours-UZH.py
Evaluations/TLD/: Ours-UZH.py
Inference/C++/: CMakeLists.txt  Super_Changed_ORB_cuda.pt  test.cpp
Inference/Python/: Super_Changed_ORB.pth.tar  readme.md
OMGC/: OMGC.py
